--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -17,15 +17,15 @@ jobs:
       - name: Download x86_64
         run: |
           mkdir -p packages/x86_64 release
-          wget --content-disposition "http://ftp.debian.org/debian/pool/main/q/qemu/qemu-user-static_${{ env.ORIGIN_VERSION }}_amd64.deb"
-          dpkg-deb -R qemu-user-static_*.deb packages/x86_64
+          wget "http://ftp.debian.org/debian/pool/main/q/qemu/qemu-user-static_${{ env.ORIGIN_VERSION }}_amd64.deb"
+          dpkg-deb -R qemu-user-static_*_amd64.deb packages/x86_64
           for i in packages/x86_64/usr/bin/qemu-*-static; do mv "$i" "packages/x86_64-$(basename "$i")"; done
 
       - name: Download arm64
         run: |
           mkdir -p packages/aarch64 release
-          wget --content-disposition "http://ftp.debian.org/debian/pool/main/q/qemu/qemu-user-static_${{ env.ORIGIN_VERSION }}_arm64.deb"
-          dpkg-deb -R qemu-user-static_*.deb packages/aarch64
+          wget "http://ftp.debian.org/debian/pool/main/q/qemu/qemu-user-static_${{ env.ORIGIN_VERSION }}_arm64.deb"
+          dpkg-deb -R qemu-user-static_*_arm64.deb packages/aarch64
           for i in packages/x86_64/usr/bin/qemu-*-static; do mv "$i" "packages/aarch64-$(basename "$i")"; done
 
       - name: Generate checksum
