--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,6 +19,7 @@ jobs:
           mkdir -p packages/x86_64 release
           wget "http://ftp.debian.org/debian/pool/main/q/qemu/qemu-user-static_${{ env.ORIGIN_VERSION }}_amd64.deb"
           dpkg-deb -R qemu-user-static_*_amd64.deb packages/x86_64
+          find packages/x86_64/usr/bin -type l -delete
           for i in packages/x86_64/usr/bin/qemu-*-static; do mv "$i" "packages/x86_64-$(basename "$i")"; done
 
       - name: Download arm64
@@ -26,6 +27,7 @@ jobs:
           mkdir -p packages/aarch64 release
           wget "http://ftp.debian.org/debian/pool/main/q/qemu/qemu-user-static_${{ env.ORIGIN_VERSION }}_arm64.deb"
           dpkg-deb -R qemu-user-static_*_arm64.deb packages/aarch64
+          find packages/aarch64/usr/bin -type l -delete
           for i in packages/aarch64/usr/bin/qemu-*-static; do mv "$i" "packages/aarch64-$(basename "$i")"; done
 
       - name: Generate checksum
